--- a/init_day4_stylesheet.css
+++ b/init_day4_stylesheet.css
@@ -2,17 +2,28 @@
     background: white;
     color: black;
     display:flex;
+    flex-direction: row;
     justify-content: center;
-    border-radius: 5px;
+    border-radius: 20px;
     padding: 10px, 45vw, 10px, 45vw;
     box-shadow: 5px;
+    border-style: solid;
     border-color: darkgrey;
-    border-width: 5px;
+    border-width: 1px;
 
 }
 
 .navigation-item {
-    border: black;
+    border-style:solid;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 10px;
     padding: 5px;
+    transition: background 0.25s ease-in;
 
+}
+
+.navigation-item:hover {
+    background-color: black;
+    color: white;
 }
