--- a/init_day4_stylesheet.css
+++ b/init_day4_stylesheet.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: center;
     border-radius: 20px;
-    padding: 10px, 45vw, 10px, 45vw;
+    padding: 5px, 45vw, 5px, 45vw;
     border-style: solid;
     border-color: darkgrey;
     border-width: 1px;
@@ -25,4 +25,47 @@
 .navigation-item:hover {
     background-color: black;
     color: white;
+}
+
+#home{
+    background: url("plane.jpg");
+    margin:15px;
+    height: 1000px;
+    display:grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 20px;
+    flex-direction: row;
+    align-items:flex-start;
+    justify-content: center;
+}
+
+.destination{
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background:white;
+    color:black;
+    font-size: 20px;
+    text-align: center;
+    border-style: solid;
+    border-radius: 20px;
+    border-width: 5px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    padding-right: 5vw;
+    padding-left: 5vw;
+    margin-top: 30px;
+    width: 10vw;
+    transition: background 0.5s ease-in-out;
+/* transition: what-you-want-to-change time-for-transition type-of-transition delay */
+}
+
+.destination:hover {
+    background: pink;
+    color: white;
+}
+
+.explore {
+    color:black;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 600px;
+    text-align: center;
 }
