--- a/init_day4_stylesheet.css
+++ b/init_day4_stylesheet.css
@@ -33,6 +33,11 @@
     color: white;
 }
 
+.welcome-statement {
+    text-align: center;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 #home{
     background: url("plane.jpg");
     margin:15px;
@@ -45,6 +50,8 @@
     justify-content: center;
 }
 
+
+
 .destination{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background:white;
@@ -54,8 +61,8 @@
     border-style: solid;
     border-radius: 20px;
     border-width: 5px;
-    padding-top: 90px;
-    padding-bottom: 90px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     padding-right: 5vw;
     padding-left: 5vw;
     margin-top: 30px;
