--- a/init_day4_stylesheet.css
+++ b/init_day4_stylesheet.css
@@ -83,3 +83,41 @@
     font-weight: 600px;
     text-align: center;
 }
+
+.loc-header {
+    color: black;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-weight: 600px;
+    text-align: center;
+}
+
+#place {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background: darkslategray;
+    height: 1000px;
+    width: 100vw;
+    margin: 90px, 5px, 90px, 5px;
+
+
+}
+
+.loc-item {
+
+    color:black;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    transition: color 0.5s ease-in;
+    height: 400px;
+    width: 300px;
+    font-size:xx-large;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-weight: 600;
+}
+
+.loc-item:hover {
+    color: white;
+    transform: translateY(-5%)
+}
